--- a/Hadmin/mail_compose.html
+++ b/Hadmin/mail_compose.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
     <title> - 写信</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
@@ -121,6 +120,16 @@
 
                                 <div class="col-sm-10">
                                     <input type="text" class="form-control" value="">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-sm-10">
+                                    <textarea type="text"  data-provide="markdown" id="text_edit" class="form-control" value=""></textarea>
+                                    <script>
+                                        $(function () {
+                                            $("#text_edit").markdown();
+                                        })
+                                    </script>
                                 </div>
                             </div>
                         </form>
