--- a/LeaRun/default.html
+++ b/LeaRun/default.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>后台管理系统</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <link rel="stylesheet" href="js/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="plugins/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="fonts/font-awesome.min.css">
     <link rel="stylesheet" href="css/index.css">
-    <script src="js/jquery/jQuery-2.2.0.min.js"></script>
-    <script src="js/charts/Chart.js"></script>
+    <script src="plugins/jquery/jQuery-2.2.0.min.js"></script>
+    <script src="plugins/charts/Chart.js"></script>
     <script>
         $(function () {
             Canvas1();
