--- a/LeaRun/index.html
+++ b/LeaRun/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>LeaRun敏捷开发框架</title>
-    <link rel="stylesheet" href="js/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="plugins/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="fonts/font-awesome.min.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/skins/_all-skins.css">
 </head>
@@ -123,8 +123,8 @@
             </div>
         </div>
     </div>
-    <script src="js/jquery/jQuery-2.2.0.min.js"></script>
-    <script src="js/bootstrap/js/bootstrap.min.js"></script>
+    <script src="plugins/jquery/jQuery-2.2.0.min.js"></script>
+    <script src="plugins/bootstrap/js/bootstrap.min.js"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
