--- a/LeaRun/index.html
+++ b/LeaRun/index.html
@@ -93,11 +93,11 @@
                 <nav class="page-tabs menuTabs">
                     <div class="page-tabs-content" style="margin-left: 0px;">
                         <a href="javascript:;" class="menuTab active" data-id="/Home/Default">欢迎首页</a>
-                        <a href="javascript:;" class="menuTab" data-id="/Home/About" style="padding-right: 15px;">平台介绍</a>
-                        <a href="javascript:;" class="menuTab" data-id="/SystemManage/Organize/Index">机构管理 <i class="fa fa-remove"></i></a>
-                        <a href="javascript:;" class="menuTab" data-id="/SystemManage/Role/Index">角色管理 <i class="fa fa-remove"></i></a>
-                        <a href="javascript:;" class="menuTab" data-id="/SystemManage/Duty/Index">岗位管理 <i class="fa fa-remove"></i></a>
-                        <a href="javascript:;" class="menuTab" data-id="/SystemManage/User/Index">用户管理 <i class="fa fa-remove"></i></a>
+                        <!--<a href="javascript:;" class="menuTab" data-id="/Home/About" style="padding-right: 15px;">平台介绍</a>-->
+                        <!--<a href="javascript:;" class="menuTab" data-id="/SystemManage/Organize/Index">机构管理 <i class="fa fa-remove"></i></a>-->
+                        <!--<a href="javascript:;" class="menuTab" data-id="/SystemManage/Role/Index">角色管理 <i class="fa fa-remove"></i></a>-->
+                        <!--<a href="javascript:;" class="menuTab" data-id="/SystemManage/Duty/Index">岗位管理 <i class="fa fa-remove"></i></a>-->
+                        <!--<a href="javascript:;" class="menuTab" data-id="/SystemManage/User/Index">用户管理 <i class="fa fa-remove"></i></a>-->
                     </div>
                 </nav>
                 <button class="roll-nav roll-right tabRight">
@@ -123,8 +123,8 @@
             </div>
         </div>
     </div>
-    <script src="plugins/jquery/jQuery-2.2.0.min.js"></script>
-    <script src="plugins/bootstrap/js/bootstrap.min.js"></script>
-    <script src="js/index.js"></script>
+    <script src="plugins/jquery/jQuery-2.2.0.min.js?v=2.2.0.min"></script>
+    <script src="plugins/bootstrap/js/bootstrap.min.js?v=3.3"></script>
+    <script src="js/index.js?v=0.1"></script>
 </body>
 </html>
