--- a/LeaRun/index.html
+++ b/LeaRun/index.html
@@ -4,8 +4,12 @@
     <title>LeaRun敏捷开发框架</title>
     <link rel="stylesheet" href="plugins/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/skins/_all-skins.css">
+    <link rel="stylesheet" href="css/index.css?v=1.0">
+    <link rel="stylesheet" href="css/skins/_all-skins.css?v=1.0">
+    <meta name="viewport" content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,user-scalable=no;">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="format-detection" content="telephone=no">
 </head>
 <body class="hold-transition skin-blue sidebar-mini" style="overflow:hidden;">
     <div id="ajax-loader" style="cursor: progress; position: fixed; top: -50%; left: -50%; width: 200%; height: 200%; background: #fff; z-index: 10000; overflow: hidden;">
@@ -14,7 +18,7 @@
     <div class="wrapper">
         <!--头部信息-->
         <header class="main-header">
-            <a href="http://www.learun.cn/adms/index.html" target="_blank" class="logo">
+            <a href="#" target="_blank" class="logo">
                 <span class="logo-mini">LR</span>
                 <span class="logo-lg">learun<strong>敏捷框架</strong></span>
             </a>
