根据jQuery插件编写规范指定了模板，准备开始写了，哈哈

--- a/Tree/Tree.html
+++ b/Tree/Tree.html
@@ -14,59 +14,64 @@
     <link rel="stylesheet" href="fonts/font-awesome.min.css">
     <link rel="stylesheet" href="css/lazy.tree.css">
     <script type="text/javascript" src="js/jQuery-2.2.0.min.js"></script>
-    <script type="text/javascript" src="js/lazy.tree.core.js"></script>
+    <script type="text/javascript" src="js/lazy.tree.core.js?v=1.0"></script>
 </head>
 <body>
 <div>
 
-    <ul id="demo1" class="lazy-tree">
-        <li>
-            <i class="fa fa-chevron-down"></i><a href="javascript:;"><i class="fa fa-folder-open"></i>我的邮箱</a>
-            <ul class="">
-                <li>
-                    <i class="fa fa-chevron-down"></i><a href="javascript:;"><i class="fa fa-folder-open"></i>QQ邮箱</a>
-                    <ul class="">
-                        <li>
-                            <i class="fa fa-chevron-down"></i><a href="javascript:;"><i class="fa fa-folder-open"></i>收件箱</a>
-                            <ul class="">
-                                <li>
-                                    <a href="javascript:;"><i class="fa fa-file-o"></i>所有未读</a>
-                                    <i>
-                                        <a href=""><i class="fa fa-plus"></i></a>
-                                        <a href=""><i class="fa fa-edit"></i></a>
-                                        <a href=""><i class="fa fa-remove"></i></a>
-                                        <a href=""><i class="fa fa-link"></i></a>
-                                    </i>
-                                </li>
-                                <li><a href="javascript:;"><i class="fa fa-file-o"></i>置顶邮件</a></li>
-                                <li><a href="javascript:;"><i class="fa fa-file-o"></i>标签邮件</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="javascript:;"><i class="fa fa-file-o"></i>已发出的邮件</a></li>
-                        <li><a href="javascript:;"><i class="fa fa-file-o"></i>垃圾邮件</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <i class="fa fa-chevron-down"></i><a href="javascript:;"><i class="fa fa-folder-open"></i>阿里云邮</a>
-                    <ul class="">
-                        <li><a href="javascript:;"><i class="fa fa-file-o"></i>收件箱</a></li>
-                        <li><a href="javascript:;"><i class="fa fa-file-o"></i>已发出的邮件</a></li>
-                        <li><a href="javascript:;"><i class="fa fa-file-o"></i>垃圾邮件</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </li>
-    </ul>
-
+    <div id="demo1" class="lazy-tree">
+        <ul>
+            <li>
+                <i class='fa fa-chevron-down'></i><a href='javascript:;'><i class='fa fa-folder-open'></i>我的邮箱</a>
+                <ul>
+                    <li>
+                        <i class='fa fa-chevron-down'></i><a href='javascript:;'><i
+                            class='fa fa-folder-open'></i>QQ邮箱</a>
+                        <ul>
+                            <li>
+                                <i class='fa fa-chevron-down'></i><a href='javascript:;'><i
+                                    class='fa fa-folder-open'></i>收件箱</a>
+                                <ul class=''>
+                                    <li>
+                                        <a href='javascript:;'><i class='fa fa-file-o'></i>所有未读</a>
+                                        <i>
+                                            <a href=''><i class='fa fa-plus'></i></a>
+                                            <a href=''><i class='fa fa-edit'></i></a>
+                                            <a href=''><i class='fa fa-remove'></i></a>
+                                            <a href=''><i class='fa fa-link'></i></a>
+                                        </i>
+                                    </li>
+                                    <li><a href='javascript:;'><i class='fa fa-file-o'></i>置顶邮件</a></li>
+                                    <li><a href='javascript:;'><i class='fa fa-file-o'></i>标签邮件</a></li>
+                                </ul>
+                            </li>
+                            <li><a href='javascript:;'><i class='fa fa-file-o'></i>已发出的邮件</a></li>
+                            <li><a href='javascript:;'><i class='fa fa-file-o'></i>垃圾邮件</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </div>
 </div>
 <div>
-    <div id="demo2">sssssss</div>
+    <div id="demo2" class="lazy-tree">444</div>
 </div>
 <script>
-    $("#demo1").lazyTree.init();
-    var txt=$("#demo2").hilight.format("aaa");
-    $("#demo2").html(txt);
+    var json = [
+        {name: "1", id: "1", pId: " ", ico: "fa fa-desktop", url: "/test"},
+        {name: "2", id: "2", pId: "1", ico: "fa fa-desktop", url: "/test"},
+        {name: "3", id: "3", pId: "1", ico: "fa fa-desktop", url: "/test"},
+        {name: "4", id: "4", pId: "1", ico: "fa fa-desktop", url: "/test"},
+        {name: "5", id: "5", pId: "1", ico: "fa fa-desktop", url: "/test"},
+        {name: "6", id: "6", pId: "1", ico: "fa fa-desktop", url: "/test"},
+        {name: "7", id: "7", pId: "1", ico: "fa fa-desktop", url: "/test"}
+    ];
+    //    alert($.fn.lazyTree.test());
+    $("#demo2").lazyTree(json);
+    //    $("#demo2").lazyTree.lazyinit();
+    //    $("#demo1").css({"color":"red","font-size":"9px"});
+    alert($.fn.lazyTree.test($("#demo2")))
 </script>
 </body>
 </html>
